[package]
name = "prost-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.76"
futures = "0.3.30"
bytes = "1.5.0"
prost = "0.12"
prost-types = "0.12"
async-prost = "0.4.0"
thiserror = "1.0.51"
dashmap = "5.5.3"
tokio = { version = "1.35.1", features = [
    "rt",
    "rt-multi-thread",
    "io-util",
    "macros",
    "net",
] }

[build-dependencies]
prost-build = "0.12.3"
